@@ -1,0 +1,11 @@
+bin_PROGRAMS = 
+
+TESTS_ENVIRONMENT = sh
+TESTS = test.initialize.sh \
+		test.bpreprocess.1.phi.x.174.sh \
+		test.bpreprocess.2.phi.x.174.sh \
+		test.bmatches.phi.x.174.sh \
+		test.balign.phi.x.174.sh \
+		test.bpostprocess.phi.x.174.sh \
+		test.diff.phi.x.174.sh \
+		test.cleanup.sh
