@@ -7,6 +7,8 @@ Please send bfast bug reports to nhomer@cs.ucla.edu
 
 Version 0.2.3
 * Updated bfix to include packed.
+* Updated bug when reading a bfast reference genome file.
+* Added "make check" functionality for regression testing.
 
 Version 0.2.2
 * Fixed major bug that was introduced in 0.1.10 where matches to 
